--- a/alacritty/config.yml
+++ b/alacritty/config.yml
@@ -11,16 +11,20 @@ font:
   size: 12.0
 
   normal:
-    family: "JetBrains Mono"
+    family: "JetBrainsMono Nerd Font"
     style: Regular
 
   bold:
-    family: "JetBrains Mono"
+    family: "JetBrainsMono Nerd Font"
     style: Bold
 
   italic:
-    family: "JetBrains Mono"
+    family: "JetBrainsMono Nerd Font"
     style: Italic
+    
+  bold_italic:
+    family: "JetBrainsMono Nerd Font"
+    style: Bold Italic
 
 # Window
 window:
