--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -4,11 +4,11 @@ env:
 
 # Theme
 import: 
-  - ./themes/palenight.yaml
+  - "./themes/palenight.yaml"
 
 # Font
 font:
-  size: 12.0
+  size: 11.0
 
   normal:
     family: "JetBrainsMono Nerd Font"
@@ -28,11 +28,11 @@ font:
 
 # Window
 window:
-  opacity: 1.0
-
-# Execute Command
+  opacity: 0.9
+  blur: true
+  decorations: None
+  
+# Shell
 shell:
-  program: C:\Windows\System32\WindowsPowerShell\v1.0\powershell.exe 
-  args:
-    - -Command
-    - ssh qorrnsmj
+  program: powershell
+  
