--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,9 +1,12 @@
 set -g mouse on
+set -g mode-keys vi
 set -g status-left-length 30
 set -g status-left "[#S] "
 set -g status-right "%H:%M %m/%d/%Y"
 set -g window-status-format "#I:#W"
 set -g window-status-current-format "#[fg=green,bg=black,bold]#I:#W"
+set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ',xterm-256color:Tc'
 
 unbind C-b
 set -g prefix C-a
@@ -50,3 +53,13 @@ set -g focus-events on
 setw -g aggressive-resize on
 
 # plugins -------------------------------------------------------------------
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+set -g @continuum-restore 'on'
+set -g @continuum-save-interval '15'
+
+run '~/.tmux/plugins/tpm/tpm'
+
